# vvvapp

./: CDCATALOG.fbk  CDCatalog.sql  CMakeLists.txt  MACOSX_fixup_bundle.sh  README.md  VVV command line options.txt  VVV.fbk  VVV.sql  VVV.tdl  vvv-Info.plist  vvv-struct-update.fdb  vvv.sln  vvv.vcproj
InnoSetup/: vvv.iss
help/en/: backup_and_restore.htd  backup_and_restore.htm  catalog_volume.htd  catalog_volume.htm  command_line_switches.htd  command_line_switches.htm  create_htb.bat  doc-0001.htn  doc-0002.htn  doc-0003.htm  doc-0005.htm  doc-0006.htm  doc-0008.htd  doc-0008.htm  doc-0011.htd  doc-0011.htm  doc-0013.htm  export_data.htd  export_data.htm  general_settings.htd  general_settings.htm  getting_started.htd  getting_started.htm  macros.h  mp3_settings.htd  mp3_settings.htm  network_usage.htd  network_usage.htm  restore_catalog.htd  restore_catalog.htm  searching.htm  server_settings.htd  server_settings.htm  update_volume.htd  update_volume.htm  vvv.chm  vvv.hhc  vvv.hhk  vvv.hhp  vvv.htb  (+4 more)
help/en/html/: general_settings.html  index.html  main.css  mp3_settings.html  network_usage.html  server_settings.html
id3lib-3.8.3/: CMakeLists.txt  Readme.txt
id3lib-3.8.3/src/: CMakeLists.txt  frame_render.cpp  io_decorators.cpp
id3lib-3.8.3/zlib/: CMakeLists.txt
id3lib-3.8.3/zlib/src/: CMakeLists.txt
linux_specific/: readme.txt  vvv-start.sh
src/: CMakeLists.txt  audio_metadata.cpp  audio_metadata.h  catalog_volume.cpp  catalog_volume.h  catalog_volume_functions.cpp  catalog_volume_functions.h  choose_virtual_folder.cpp  choose_virtual_folder.h  chooselang.cpp  chooselang.h  convert_db_unicode.cpp  decode_search_string.cpp  decode_search_string.h  exportdata.cpp  exportdata.h  long_task_beep.cpp  long_task_beep.h  mainframe.cpp  mainframe.h  mylistitemdata.h  mytreeitemdata.h  object_description.cpp  object_description.h  opencatalog.cpp  opencatalog.h  resource.h  restore.cpp  restore.h  settings.cpp  settings.h  update_volume.cpp  update_volume.h  utils.cpp  utils.h  volume_description.cpp  volume_description.h  vvv.cpp  vvv.h  vvv.pjd  (+6 more)
src/data_interface/: CMakeLists.txt  base_db.cpp  base_db.h  base_rec.cpp  base_rec.h  data_error.cpp  data_error.h  db_null.h  fb_base_rec.cpp  fb_files.cpp  fb_files_audio_metadata.cpp  fb_paths.cpp  fb_virtual_files.cpp  fb_virtual_paths.cpp  fb_volumes.cpp  files.cpp  files.h  files_audio_metadata.cpp  files_audio_metadata.h  firebird_db.cpp  firebird_db.h  paths.cpp  paths.h  virtual_files.cpp  virtual_files.h  virtual_paths.cpp  virtual_paths.h  volumes.cpp  volumes.h
src/firebird/: fb_base_rec.cpp  fb_files.cpp  fb_paths.cpp  fb_volumes.cpp  firebird_db.cpp  firebird_db.h
src/graphics/: deffile.xpm  folder_closed.xpm  folder_opened.xpm  removable.xpm  tlb_catalog.inc  tlb_catalog.xpm  tlb_new.xpm  tlb_open.xpm  tlb_physical.xpm  tlb_search.xpm  tlb_up.xpm  tlb_virtual.xpm  vvv-document.icns  vvv.icns  vvv.xpm  vvv16.xpm  vvv32.xpm
src/ibpp/: CMakeLists.txt  changelog.txt  ibpp.vcproj
src/ibpp/core/: CMakeLists.txt  _ibpp.h  database.cpp  ibpp.h
src/ibpp/tests/vs6/: tests.ncb  tests.sln  tests.vcproj
translations/: translators.txt  vvv-cs.mo  vvv-cs.po  vvv-de.mo  vvv-de.po  vvv-es.mo  vvv-es.po  vvv-fr.mo  vvv-fr.po  vvv-hr.mo  vvv-hr.po  vvv-hu.mo  vvv-hu.po  vvv-it.mo  vvv-it.po  vvv-nl.mo  vvv-nl.po  vvv-pl.mo  vvv-pl.po  vvv-pt.mo  vvv-pt.po  vvv-ro.mo  vvv-ro.po  vvv-ru.mo  vvv-ru.po  vvv-sr.mo  vvv-sr.po  vvv-sr@latin.mo  vvv-sr@latin.po  vvv-uk.mo  vvv-uk.po  vvv.mo  vvv.pot
translations/cs/: vvv-cs.mo  vvv.po  wxstd.mo  wxstd.po
translations/cz/: vvv.mo  vvv.po
translations/de/: vvv-de.po  vvv.mo  vvv.po  wxstd.mo  wxstd.po
translations/es/: vvv-es.po  vvv.mo  vvv.po  wxstd.mo  wxstd.po
translations/fr/: vvv.mo  vvv.po  wxstd.mo  wxstd.po
translations/hr/: vvv.mo  vvv.po
translations/hu/: wxstd.mo  wxstd.po
translations/it/: vvv.mo  vvv.po  wxstd.mo  wxstd.po
translations/nl/: vvv.mo  vvv.po  wxstd.mo  wxstd.po
translations/pl/: vvv.mo  vvv.po  vvvpl.mo  vvvpl.po  wxstd.mo  wxstd.po
translations/pt/: vvv.mo  vvv.po  wxstd.mo  wxstd.po
translations/ro/: vvv.po
translations/ru/: vvv-ru.mo  vvv.po  wxstd.mo  wxstd.po
translations/sr/: vvv-sr.mo  vvv.po
translations/sr@latin/: vvv-sr@latin.mo
translations/uk/: vvv-uk.po  wxstd.mo  wxstd.po
vvv.xcodeproj/: fulvio.mode1  fulvio.pbxuser  project.pbxproj
website/: command_line_switches.html  download.html  how_to_compile_vvv.html  how_to_translate_vvv.html  index.html  network_usage.html  screenshots.html  styles.css  versions.html
